@@ -1,4 +1,13 @@
-$Id: ChangeLog 3904 2014-06-15 14:21:15Z chrfranke $
+$Id: ChangeLog 3905 2014-06-16 21:11:51Z chrfranke $
+
+2014-06-16  Christian Franke  <franke@computer.org>
+
+	drivedb.h:
+	- Seagate Laptop Thin HDD
+	- Seagate Barracuda Green (AF): no warnings for newer firmware versions
+	- Seagate Constellation.2 (SATA)
+	- Seagate NAS HDD
+	- Seagate Video 3.5 HDD
 
 2014-06-15  Christian Franke  <franke@computer.org>
 
